# libxrender

./: .gitlab-ci.yml  Makefile.am  README.md  configure.ac  meson.build  xrender.pc.in
include/X11/extensions/: Xrender.h
src/: AddTrap.c  Color.c  Composite.c  Cursor.c  FillRect.c  FillRects.c  Filter.c  Glyph.c  Picture.c  Poly.c  Trap.c  Tri.c  Xrender.c  Xrenderint.h
